Implement full dashboard UI updates: summary cards section, spending category styling, and section backgrounds

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  flutter_speed_dial: 7.0.0
  
   flutter_local_notifications: ^19.4.1
   flutter_local_notifications_linux: ^6.0.0
